// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCard /> by default matches with snapshot 1`] = `
<div
  className="sc-Axmtr ewHqPM k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-AxirZ igIQeF sc-AxhUy ixJEVp k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-AxiKw ccnYHX k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with imageContainerRatio props matches with snapshot 1`] = `
<div
  className="sc-Axmtr ewHqPM k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-AxirZ igIQeF sc-AxhUy ikEZyS k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-AxiKw ccnYHX k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with withPlayerButtonOnImage props matches with snapshot 1`] = `
<div
  className="sc-Axmtr ewHqPM k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-AxirZ igIQeF sc-AxhUy ixJEVp k-Card__imageContainer"
  >
    <div
      className="sc-AxhCb CUkwY"
    >
      <span
        className="sc-AxjAm StDqN k-u-color-background1 k-u-size-default k-u-weight-regular"
      >
        ►
      </span>
    </div>
    <img
      alt=""
      className="sc-AxiKw ccnYHX k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> without horizontalStroke prop matches snapshot 1`] = `
<div
  className="sc-Axmtr ewHqPM k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-AxirZ igIQeF sc-AxhUy ixJEVp k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-AxiKw ccnYHX k-Card__image"
      src=""
    />
  </div>
</div>
`;
